--- a/src/project_state.json
+++ b/src/project_state.json
@@ -5,18 +5,9 @@
   "architectural_notes": [],
   "known_issues": [],
   "isFixRequest": false,
-  "existing_features": [
-    {
-      "id": "feature-update-only-the-footer-bottom-bar-copyright-p-element-at-xpath-html-1-body-1-div-1-div-1-footer-1-div-1-div-1-div-1-p-1-so-the-displayed-name-becomes-sanjay-singh-chauhan-while-keeping-the-dynamic-current-year-and-all-other-footer-content-unchanged",
-      "title": "Update ONLY the footer bottom-bar copyright <p> element at XPath /html[1]/body[1]/div[1]/div[1]/footer[1]/div[1]/div[1]/div[1]/p[1] so the displayed name becomes \"Sanjay singh Chauhan\", while keeping the dynamic current year and all other footer content unchanged.",
-      "reqIds": [
-        "REQ-2"
-      ],
-      "version": 1
-    }
-  ],
+  "existing_features": [],
   "new_feature_requests": [],
-  "projectName": "Sanjay singh Chauhan",
+  "projectName": "No-op: Footer copyright name already set to \"Sanjay singh Chauhan\"",
   "clarification_mode": "instant",
   "clarification_rounds": 0
 }
